<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText">


    <com.tera.custom_progressbar.ProgressBarCircle
        android:id="@+id/pbMax"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:circleStroke="1dp"
        app:dashColorActive="@color/black"
        app:dashColorInactive="@color/red"
        app:dashHeight="20dp"
        app:dashRadius="2dp"
        app:dashWidth="5dp"
        app:max="10"
        app:showPercent="true"
        app:text="0"
        app:textColor="@color/blue"
        app:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/max_value" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slSetMax"
        style="@style/Widget.Material3.Slider.Legacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:valueFrom="10"
        android:valueTo="40"
        app:labelBehavior="gone"
        app:thumbColor="@color/blue_700"
        app:trackColorActive="@color/blue"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/progress" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slProgress"
        style="@style/Widget.Material3.Slider.Legacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:valueFrom="0"
        android:valueTo="59"
        app:labelBehavior="gone"
        app:thumbColor="@color/blue_700"
        app:trackColorActive="@color/blue"
        tools:ignore="SpeakableTextPresentCheck" />

    <!-- Нижний -->
    <TextView
        android:id="@+id/tvSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/setting"
        android:textColor="@color/black" />

    <com.tera.custom_progressbar.ProgressBarCircle
        android:id="@+id/pbTimer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:dashHeight="15dp"
        app:max="59"
        app:text="0"
        app:textSize="25sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/ic_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bnPause"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_pause"
            app:layout_constraintEnd_toStartOf="@id/bnStop"
            app:layout_constraintStart_toEndOf="@+id/bnStart"
            app:layout_constraintTop_toTopOf="@+id/bnStart"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_stop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bnPause"
            app:layout_constraintTop_toTopOf="@+id/bnPause"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bnStop"
            tools:ignore="ContentDescription,RelativeOverlap,SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/rgFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbFont1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:checked="true"
            android:text="@string/normal"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rbFont2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/bold" />

        <RadioButton
            android:id="@+id/rbFont3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LED" />

    </RadioGroup>

</LinearLayout>













